cmake_minimum_required(VERSION 2.4)
project(ZenLib)

include(ExternalProject)
include(cmake/clang-format.cmake)

set(ZENLIB_BUILD_EXAMPLES OFF CACHE BOOL "Whether to build the examples")
set(ZENLIB_BUILD_TESTS OFF CACHE BOOL "Whether to build tests")
set(PHYSFS_BUILD_SHARED OFF)

set(CMAKE_CXX_STANDARD 14)

# 3rd-party dependencies
set(PHYSFS_BUILD_TEST OFF CACHE STRING "" FORCE)
add_subdirectory(lib/physfs)

include_directories(lib/physfs/src)
include_directories(.)

# Internal libraries
add_subdirectory(utils)
add_subdirectory(vdfs)
add_subdirectory(zenload)
add_subdirectory(daedalus)

# Tests
if(ZENLIB_BUILD_TESTS)
  add_subdirectory(tests)
endif()

if(ZENLIB_BUILD_EXAMPLES)
  add_subdirectory(samples)
endif()
